# humbledb

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .releaserc.json  .travis.yml  LICENSE.rst  README.md  README.rst  TODO.rst  docker-compose.yml  humble.py  humbledb.py  pyproject.toml  setup.py
.github/: CODEOWNERS  FUNDING.yml  actionlint.yaml
.github/workflows/: ci.yaml  release.yaml
docs/: api.rst  changes.rst  conf.py  index.rst  tutorial.rst
humbledb/: __init__.py  _version.py  array.py  cursor.py  document.py  errors.py  helpers.py  index.py  maps.py  mongo.py  mongo.txt  report.py
script/: docs
test/: conftest.py  test_db.py  test_humbledb.py  test_humbledb_mongo.py  test_humbledb_report.py  util.py
test/test_humbledb/: test_array.py  test_auth.py  test_cursor.py  test_document.py  test_helpers.py  test_index.py  test_maps.py  test_mongo.py  test_report.py  test_version.py
