[project]
name = "humbledb"
version = "7.0.0"
description = "HumbleDB - MongoDB Object-Document Mapper"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Jacob Alheid", email = "shakefu@gmail.com"},
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "pymongo >= 2.0.1",
    "pyconfig",
    "pytool >= 3.4.1",
]

[dependency-groups]
dev = [
    "coveralls>=4.0.1",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "pytest-docker>=3.2.2",
]
docs = [
    "sphinx-rtd-theme>=3.0.0,<4.0.0",
    "sphinx-autodoc-typehints>=3.0.0,<4.0.0",
    "sphinx>=8.0.0, <9.0.0",
]

# This is required so setuptools doesn't see other directories as a package
[tool.setuptools]
packages = ["humbledb"]

[tool.coverage.run]
omit = [
    "humbledb/_version.py",
    "test/**",
]
